# localminima

./: README.md  build_image.sh  pyproject.toml  run_dockerized.sh
docker/: Dockerfile  entrypoint.sh
examples/: example_performance.py  example_visualize.py
localminima/opt/: opt.py
localminima/testfunctions/: testfunctions.py
