[tool.poetry]
name = "localminima"
version = "0.1.0"
description = "Find local minima"
authors = ["Matthias Schloegl <matthias.schloegl@gmx.de>"]

[tool.poetry.dependencies]
python = "=3.8"
black = "^22.6.0"
mypy = "^0.961"
matplotlib = "^3.5.2"
scipy = "1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
